fix: add volume mount.

--- a/charts/heytaco-anywhere/templates/deployment.yaml
+++ b/charts/heytaco-anywhere/templates/deployment.yaml
@@ -43,6 +43,10 @@ spec:
             - secretRef:
                 name: {{ . }}
             {{- end }}
+          volumeMounts:
+            - name: storage-volume
+              mountPath: {{ .Values.persistentVolume.mountPath }}
+              subPath: "{{ .Values.persistentVolume.subPath }}"
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
