--- a/charts/heytaco-anywhere/values.yaml
+++ b/charts/heytaco-anywhere/values.yaml
@@ -51,12 +51,10 @@ env:
   # REQUIRED: The protocol to pair with the value in HEYTACO_ANYWHERE_SERVER_HOST (http or https).
   #
   HEYTACO_ANYWHERE_SERVER_PROTO: https
-
-  # DB-specific vairables.
-  # If you are using SQLite as your DB for Heytaco Anywhere, it is recommended to enable persistence.
+  # REQUIRED: The secret of Heytaco! app.
+  # You can get the secret from https://heytaco.chat/team/apps.
   #
-  HEYTACO_ANYWHERE_STORE_DRIVER: sqlite3
-  HEYTACO_ANYWHERE_STORE_SOURCE: file:/var/data/sqlite3.db?cache=shared&_fk=1
+  HEYTACO_ANYWHERE_HEYTACO_APP_SECRET: ""
 
   # Set the secret that the server validates the signature.
   #
@@ -69,6 +67,12 @@ env:
   HEYTACO_ANYWHERE_SLACK_CHANNEL:
   HEYTACO_ANYWHERE_SLACK_CLIENT_ID:
   HEYTACO_ANYWHERE_SLACK_CLIENT_SECRET:
+
+  # DB-specific vairables.
+  # If you are using SQLite as your DB for Heytaco Anywhere, it is recommended to enable persistence.
+  #
+  HEYTACO_ANYWHERE_STORE_DRIVER: sqlite3
+  HEYTACO_ANYWHERE_STORE_SOURCE: file:/var/data/sqlite3.db?cache=shared&_fk=1
 
   # TODO: support Teams
 
