--- a/charts/heytaco-anywhere/values.yaml
+++ b/charts/heytaco-anywhere/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: heytacoanywhere/heytaco-anywhere
-  tag: "0.1.0-beta"
+  tag: "0.1.0-beta2"
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
