--- a/charts/heytaco-anywhere/Chart.yaml
+++ b/charts/heytaco-anywhere/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: "0.1.0-beta2"
-description: A Helm chart for Kubernetes
+appVersion: "0.1.1"
+description: A Helm chart for Heytaco Anywhere
 name: heytaco-anywhere
-version: 0.1.0
+version: 0.1.1
