fix: fix empty string

--- a/charts/heytaco-anywhere/values.yaml
+++ b/charts/heytaco-anywhere/values.yaml
@@ -65,15 +65,15 @@ env:
 
   # Slack-specific variables.
   #
-  HEYTACO_ANYWHERE_SLACK_CHANNEL:
-  HEYTACO_ANYWHERE_SLACK_CLIENT_ID:
-  HEYTACO_ANYWHERE_SLACK_CLIENT_SECRET:
+  HEYTACO_ANYWHERE_SLACK_CHANNEL: ""
+  HEYTACO_ANYWHERE_SLACK_CLIENT_ID: ""
+  HEYTACO_ANYWHERE_SLACK_CLIENT_SECRET: ""
 
   # DB-specific vairables.
   # If you are using SQLite as your DB for Heytaco Anywhere, it is recommended to enable persistence.
   #
-  # HEYTACO_ANYWHERE_STORE_DRIVER: 
-  # HEYTACO_ANYWHERE_STORE_SOURCE: 
+  # HEYTACO_ANYWHERE_STORE_DRIVER: ""
+  # HEYTACO_ANYWHERE_STORE_SOURCE: ""
 
   # TODO: support Teams
 
@@ -81,18 +81,18 @@ env:
 
   # Github-specific variables.
   #
-  # HEYTACO_ANYWHERE_GITHUB_CLIENT_ID: 
-  # HEYTACO_ANYWHERE_GITHUB_CLIENT_SECRET:
+  # HEYTACO_ANYWHERE_GITHUB_CLIENT_ID: ""
+  # HEYTACO_ANYWHERE_GITHUB_CLIENT_SECRET: ""
 
   # Jira-specific variables.
   #
-  # HEYTACO_ANYWHERE_JIRA_CLIENT_ID:
-  # HEYTACO_ANYWHERE_JIRA_CLIENT_SECRET
+  # HEYTACO_ANYWHERE_JIRA_CLIENT_ID: ""
+  # HEYTACO_ANYWHERE_JIRA_CLIENT_SECRET: ""
 
   # Confluence-specific variables.
   #
-  # HEYTACO_ANYWHERE_CONFLUENCE_CLIENT_ID:
-  # HEYTACO_ANYWHERE_CONFLUENCE_CLIENT_SECRET
+  # HEYTACO_ANYWHERE_CONFLUENCE_CLIENT_ID: ""
+  # HEYTACO_ANYWHERE_CONFLUENCE_CLIENT_SECRET: ""
 
 # If you'd like to provide your own Kubernetes Secret object instead of passing your values
 # in un-encrypted, pass in the name of a created + populated Secret in the same Namespace
